# Multi-Agent-Study-Coding-Assistant

./: .dockerignore  .gitignore  .~lock.slides_8_onwards.pdf#  README.md  agents.py  analyze_results.py  api.py  app.py  build_slides_8_onwards.py  coding_test_queries.json  condition_b_coding.json  condition_b_coding_v2.json  daily_runs.sh  dockerfile  evaluate_swe.py  evaluation.py  generate_figures.py  generate_figures_v2.py  graph.py  list_swe_instances.py  lu47qlrjh.tmp  next_steps.md  openhands_agent.py  openhands_client.py  prompts.py  pyproject-py312.toml  pyproject.toml  remote_server_runbook.md  requirements.txt  run_ab_only.py  run_benchmark.py  setup_py312.ps1  setup_remote.md  slides_8_onwards.pptx  swe_bench_runner.py  sweep_config.json  test_openhands_sdk.py  test_queries.json  tools.py  visualize_graph.py
assets/: architecture_condition_a.mmd  architecture_condition_b.mmd  architecture_condition_c.mmd  research_graph.mmd
chroma_db/badf6e03-5db8-4c67-9bb5-27e1f200f8ac/: index_metadata.pickle
docs/: Shajee_Raza_Sem4_Article.docx  Shajee_Raza_Sem4_Research_Report.docx  ~$ajee_Raza_Sem4_Article.docx
docs/old/: Shajee_Raza_Research Report Temp.docx  Shajee_Raza_Sem4_Article.docx  Shajee_Raza_Sem4_Article_v2.docx
memory/: notes_memory.py  rag.py  shared_memory.py
memory/notes_db/: chroma.sqlite3
presentation scripts/: pregrad script.txt
